# roguelike

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: attack-frag.glsl  attack-vert.glsl  background-vert.glsl  simple-frag.glsl  texture-frag.glsl  vert.glsl
src/: display.c  enemy.c  enemy.h  event.c  event.h  gl-func.c  gl-func.h  init.c  level.c  level.h  main.c  roguelike.c  roguelike.h  sprite.c  sprite.h  structs.c  structs.h  text.c  text.h  update.c
